Fix the height collapse bug via issue #1
Fix for MS Edge and Gecko.

--- a/src/less/module/slideshow-new.less
+++ b/src/less/module/slideshow-new.less
@@ -1,6 +1,5 @@
 .slideshow {
 	position: relative;
-	display: flex;
 	overflow: hidden;
 	-webkit-tap-highlight-color: rgba(0,0,0,0);
 	user-select: none;
